--- a/craft-murti.html
+++ b/craft-murti.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Makrana Marble – Charbhuba Minerals</title>
+  <title>Craft & Murti – Charbhuba Minerals and Micron</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- <header><div class="navbar"><div class="logo">Charbhuba Minerals</div></div></header> -->
-  <header>
+   <header>
     <div class="navbar">
       <div class="logo">Charbhuba Minerals</div>
       <nav>
@@ -20,18 +19,17 @@
       </nav>
     </div>
   </header>
-
   <section class="product-view">
-    <h1>Makrana Marble Slab</h1>
+    <h1>Craft & Murti</h1>
   
-    <p>Premium Makrana marble slabs, ideal for flooring, walls, temples, and decorative use. We offer consistent supply with superior finish and competitive pricing.</p>
+    <p>Discover our exquisite range of stone handicrafts and murtis, combining traditional craftsmanship with cultural significance. Each piece is carefully carved and polished, perfect for decoration, gifting, spirituality, or personal collections.</p>
       <div  class="image-row">
-        <!-- <img src="img/marble1.jpg" alt="Makrana Marble" class="img-medium-small"> -->
         
-        <img src="img/marble5.jpg" alt="Makrana Marble" class="img-medium-small">
-        <img src="img/marble6.jpg" alt="Makrana Marble" class="img-medium-small">
-    </div>  
+        <img src="img/murti2.jpg" alt="Mineral Powder" class="img-medium">
+        <!-- <img src="img/murti.jpg" alt="murti 1" class="img-medium"> -->
+    </div>
   </section>
+
 
   <section class="contact">
     <h2>Contact Us</h2>
