--- a/granite.html
+++ b/granite.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Granite - Charbhuba Minerals and Micron</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Granite Slab – Charbhuba Minerals and Micron</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
+    <header>
+    <div class="navbar">
+      <div class="logo">Charbhuba Minerals</div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="marble.html">Marble</a>
+        <a href="granite.html">Granite</a>
+        <a href="temple-carving.html">Temple Carving</a>
+        <a href="powder.html">Powder</a>
+        <a href="craft-murti.html">Craft & Murti</a>
+      </nav>
+    </div>
+  </header>
+  <section class="product-view">
+    <h1>Granite Slab</h1>
+    
+    <p>Our high‑quality <strong>granite slabs</strong> are perfect for countertops, facades, flooring, and exterior applications. Available in a wide range of colors and finishes, these slabs offer strength, resistance to wear, and aesthetic appeal.</p>
+    <div  class="image-row">
+        <!-- <img src="img/granite3.jpg" alt="granite" class="img-medium-small-mid"> -->
+        <img src="img/granite2.jpg" alt="granite" class="img-medium-small-mid">
+        <img src="img/granite4.jpg" alt="granite" class="img-medium-small-mid1">
+        <img src="img/granite5.jpg" alt="granite" class="img-medium-small-mid1">
+    </div>  
+  </section>
 
-    <main>
-        <h2>Granite Slab</h2><p>Durable and beautiful granite slabs perfect for all architectural needs.</p>
-    </main>
 
-    <div id="footer"></div>
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:rsingh457@gmail.com">rsingh457@gmail.com</a></p>
+    <p>Phone: 9929263820, 8005588580, 7300034488</p>
+    <p>Address: Makrana, Rajasthan, India</p>
+  </section>
+
+  <footer>
+    <p>© 2020 Charbhuba Minerals and Micron</p>
+  </footer>
 </body>
 </html>
