--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Index - Charbhuba Minerals and Micron</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Charbhuba Minerals and Micron</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header"></div>
+  <header>
+    <div class="navbar">
+      <div class="logo">Charbhuba Minerals</div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="marble.html">Marble</a>
+        <a href="granite.html">Granite</a>
+        <a href="temple-carving.html">Temple Carving</a>
+        <a href="powder.html">Powder</a>
+        <a href="craft-murti.html">Craft & Murti</a>
+      </nav>
+    </div>
+  </header>
 
-    <main>
-        <h2>Welcome to Charbhuba Minerals and Micron</h2><p>We specialize in marble, granite, powders, carvings, and handcrafted murtis. Our key strengths: competitive pricing, timely delivery, high-quality products, and customer satisfaction.</p>
-    </main>
+  <section class="hero">
+    <h1>Natural Stone Elegance from Makrana</h1>
+    <p>Premium Marble, Granite, Powders & Artisan Carvings</p>
+    <a href="#products" class="btn">Explore Products</a>
+  </section>
 
-    <div id="footer"></div>
+  <section id="products" class="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <div class="card"><a href="marble.html"><img src="img/marble4.jpg" alt=""><h3>Makrana Marble</h3></a></div>
+      <div class="card"><a href="granite.html"><img src="img/granite1.jpg" alt=""><h3>Granite Slabs</h3></a></div>
+      <div class="card"><a href="temple-carving.html"><img src="img/temple.jpeg" alt=""><h3>Temple Carving</h3></a></div>
+      <div class="card"><a href="powder.html"><img src="img/powder.jpg" alt=""><h3>Mineral Powder</h3></a></div>
+      <div class="card"><a href="craft-murti.html"><img src="img/murti2.jpg" alt=""><h3>Craft & Murti</h3></a></div>
+    </div>
+  </section>
+
+  <section class="strengths">
+    <h2>Why Choose Us</h2>
+    ✅ Competitive Pricing
+    ✅ Timely Delivery
+    ✅ High Quality Products
+    ✅ Customer Satisfaction
+
+  </section>
+
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:rsingh457@gmail.com">rsingh457@gmail.com</a></p>
+    <p>Phone: 9929263820, 8005588580, 7300034488</p>
+    <p>Address: Makrana, Rajasthan, India</p>
+  </section>
+
+  <footer>
+    <p>© 2020 Charbhuba Minerals and Micron</p>
+  </footer>
 </body>
 </html>
