--- a/temple-carving.html
+++ b/temple-carving.html
@@ -1,18 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Temple-carving - Charbhuba Minerals and Micron</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Temple Contract Carving – Charbhuba Minerals and Micron</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
+    <header>
+    <div class="navbar">
+      <div class="logo">Charbhuba Minerals</div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="marble.html">Marble</a>
+        <a href="granite.html">Granite</a>
+        <a href="temple-carving.html">Temple Carving</a>
+        <a href="powder.html">Powder</a>
+        <a href="craft-murti.html">Craft & Murti</a>
+      </nav>
+    </div>
+  </header>
+  <section class="product-view">
+    <h1>Temple Contract Carving</h1>
+    <p>At Charbhuba Minerals and Micron, we offer bespoke <strong>temple contract carving</strong> services carried out by skilled artisans. Whether it's intricate stone pillars, ornate facades, or elaborate sculptures, our team delivers craftsmanship rooted in tradition, precision, and artistic excellence.</p>
+    <div  class="image-row">
+        <!-- <img src="img/granite3.jpg" alt="granite" class="img-medium-small-mid"> -->
+        <!-- <img src="img/temple.jpeg" alt="granite" class="img-medium-small"> -->
+        <img src="img/temple1.jpg" alt="granite" class="img-medium-small-mid2">
+        <img src="img/temple2.jpg" alt="granite" class="img-medium-small-mid2">
+        <!-- <img src="img/temple3.jpg" alt="granite" class="img-medium-small"> -->
+    </div>  
+    <!-- <p>Our high‑quality <strong>granite slabs</strong> are perfect for countertops, facades, flooring, and exterior applications. Available in a wide range of colors and finishes, these slabs offer strength, resistance to wear, and aesthetic appeal.</p> -->
+  </section>
 
-    <main>
-        <h2>Temple Contract Carving</h2><p>Expert carving for temples with detailed craftsmanship and custom designs.</p><img src='img/temple-carving.jpg' alt='Temple Carving' style='max-width:100%;'>
-    </main>
 
-    <div id="footer"></div>
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:rsingh457@gmail.com">rsingh457@gmail.com</a></p>
+    <p>Phone: 9929263820, 8005588580, 7300034488</p>
+    <p>Address: Makrana, Rajasthan, India</p>
+  </section>
+
+  <footer>
+    <p>© 2020 Charbhuba Minerals and Micron</p>
+  </footer>
 </body>
 </html>
