--- a/powder.html
+++ b/powder.html
@@ -1,18 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Powder - Charbhuba Minerals and Micron</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <title>Powder Products – Charbhuba Minerals and Micron</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="header"></div>
-
+    <header>
+    <div class="navbar">
+      <div class="logo">Charbhuba Minerals</div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="marble.html">Marble</a>
+        <a href="granite.html">Granite</a>
+        <a href="temple-carving.html">Temple Carving</a>
+        <a href="powder.html">Powder</a>
+        <a href="craft-murti.html">Craft & Murti</a>
+      </nav>
+    </div>
+  </header>
+  <section class="product-view">
+    <h1>Mineral Powder</h1>
+    <div  class="image-row">
+        <img src="img/powder.jpg" alt="Mineral Powder" class="img-small">
+        <img src="img/powder1.jpg" alt="Mineral Powder" class="img-small">
+        <img src="img/powder2.jpg" alt="Mineral Powder" class="img-small">
+        <img src="img/powder3.jpg" alt="Mineral Powder" class="img-small">
+    </div>
+    <!-- <p>Our high‑quality <strong>granite slabs</strong> are perfect for countertops, facades, flooring, and exterior applications. Available in a wide range of colors and finishes, these slabs offer strength, resistance to wear, and aesthetic appeal.</p> -->
     <main>
-        <h2>Stone Powder</h2><ul><li>80 Mesh</li><li>100 Mesh</li><li>200 Mesh</li><li>300 Mesh</li><li>500 Mesh</li></ul>
+    <section>
+      <p>We supply mineral powders in a variety of mesh sizes to suit industrial, construction, and decorative needs:</p>
+      <!-- <ul> -->
+        <li><strong>80 mesh</strong></li>
+        <li><strong>100 mesh</strong></li>
+        <li><strong>200 mesh</strong></li>
+        <li><strong>300 mesh</strong></li>
+        <li><strong>500 mesh</strong></li>
+      <!-- </ul> -->
+    </section>
     </main>
+  </section>
 
-    <div id="footer"></div>
+
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:rsingh457@gmail.com">rsingh457@gmail.com</a></p>
+    <p>Phone: 9929263820, 8005588580, 7300034488</p>
+    <p>Address: Makrana, Rajasthan, India</p>
+  </section>
+
+  <footer>
+    <p>© 2020 Charbhuba Minerals and Micron</p>
+  </footer>
 </body>
 </html>
