--- a/powder.html
+++ b/powder.html
@@ -22,10 +22,10 @@
   <section class="product-view">
     <h1>Mineral Powder</h1>
     <div  class="image-row">
-        <img src="img/powder.jpg" alt="Mineral Powder" class="img-small">
-        <img src="img/powder1.jpg" alt="Mineral Powder" class="img-small">
-        <img src="img/powder2.jpg" alt="Mineral Powder" class="img-small">
-        <img src="img/powder3.jpg" alt="Mineral Powder" class="img-small">
+        <img src="img/powder3.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
+        <img src="img/powder2.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
+        <img src="img/powder1.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
+        <!-- <img src="img/powder.jpg" alt="Mineral Powder" class="img-medium-small-mid3"> -->
     </div>
     <!-- <p>Our high‑quality <strong>granite slabs</strong> are perfect for countertops, facades, flooring, and exterior applications. Available in a wide range of colors and finishes, these slabs offer strength, resistance to wear, and aesthetic appeal.</p> -->
     <main>
