--- a/powder.html
+++ b/powder.html
@@ -23,7 +23,7 @@
     <h1>Mineral Powder</h1>
     <div  class="image-row">
         <img src="img/powder3.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
-        <img src="img/powder2.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
+        <!-- <img src="img/powder2.jpg" alt="Mineral Powder" class="img-medium-small-mid3"> -->
         <img src="img/powder1.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
         <!-- <img src="img/powder.jpg" alt="Mineral Powder" class="img-medium-small-mid3"> -->
     </div>
