--- a/powder.html
+++ b/powder.html
@@ -30,12 +30,13 @@
     <!-- <p>Our high‑quality <strong>granite slabs</strong> are perfect for countertops, facades, flooring, and exterior applications. Available in a wide range of colors and finishes, these slabs offer strength, resistance to wear, and aesthetic appeal.</p> -->
     <main>
     <section>
-      <p>We supply mineral powders in a variety of mesh sizes to suit industrial, construction, and decorative needs:</p>
+      <p>We supply celcite powders in a variety of mesh sizes to suit industrial, construction, and decorative needs:</p>
       <!-- <ul> -->
         <li><strong>80 mesh</strong></li>
         <li><strong>100 mesh</strong></li>
         <li><strong>200 mesh</strong></li>
         <li><strong>300 mesh</strong></li>
+        <li><strong>400 mesh</strong></li>
         <li><strong>500 mesh</strong></li>
       <!-- </ul> -->
     </section>
