--- a/powder.html
+++ b/powder.html
@@ -20,7 +20,7 @@
     </div>
   </header>
   <section class="product-view">
-    <h1>Mineral Powder</h1>
+    <h1>Celcite Powder</h1>
     <div  class="image-row">
         <img src="img/powder3.jpg" alt="Mineral Powder" class="img-medium-small-mid3">
         <!-- <img src="img/powder2.jpg" alt="Mineral Powder" class="img-medium-small-mid3"> -->
